new schema v2 with jooq codegen